refactor(ownership): implement ownership checks and centralized OwnershipException handling across services and controllers