@@ -1,30 +1,59 @@
 package com.kml.capacity.service.impl;
 
+import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
+
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import com.kml.api.error.OwnershipException;
 import com.kml.capacity.dto.InventoryItemResponseDto;
 import com.kml.capacity.mapper.InventoryMapper;
+import com.kml.capacity.security.CurrentUserProvider;
 import com.kml.capacity.service.InventoryService;
+import com.kml.domain.audit.UserActivityLog;
 import com.kml.domain.inventory.InventoryItem;
+import com.kml.domain.user.User;
 import com.kml.infra.InventoryRepository;
 import com.kml.infra.StorageUnitInventoryAssignmentRepository;
 import com.kml.infra.StorageUnitRepository;
-import java.util.List;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
+import com.kml.infra.UserActivityLogRepository;
 
 @Service
 public class InventoryServiceImpl implements InventoryService {
 
   private final InventoryRepository inventoryRepository;
   private final StorageUnitRepository storageUnitRepository;
-  private final StorageUnitInventoryAssignmentRepository storageUnitInventoryAssignmentRepository;
+  private final StorageUnitInventoryAssignmentRepository assignmentRepository;
+  private final UserActivityLogRepository activityLogRepository;
+  private final CurrentUserProvider currentUserProvider;
 
   public InventoryServiceImpl(
       InventoryRepository inventoryRepository,
       StorageUnitRepository storageUnitRepository,
-      StorageUnitInventoryAssignmentRepository storageUnitInventoryAssignmentRepository) {
-    this.inventoryRepository = inventoryRepository;
-    this.storageUnitRepository = storageUnitRepository;
-    this.storageUnitInventoryAssignmentRepository = storageUnitInventoryAssignmentRepository;
+      StorageUnitInventoryAssignmentRepository assignmentRepository,
+      UserActivityLogRepository activityLogRepository,
+      CurrentUserProvider currentUserProvider) {
+
+    this.inventoryRepository = Objects.requireNonNull(inventoryRepository);
+    this.storageUnitRepository = Objects.requireNonNull(storageUnitRepository);
+    this.assignmentRepository = Objects.requireNonNull(assignmentRepository);
+    this.activityLogRepository = Objects.requireNonNull(activityLogRepository);
+    this.currentUserProvider = Objects.requireNonNull(currentUserProvider);
+  }
+
+  // Helper to log user actions
+  private void logActivity(String action, InventoryItem item) {
+    User currentUser = currentUserProvider.getCurrentUser();
+    UserActivityLog log =
+        new UserActivityLog(
+            item.getOwner(),
+            currentUser,
+            action,
+            InventoryItem.class.getSimpleName(),
+            item.getId());
+    activityLogRepository.save(log);
   }
 
   @Override
@@ -37,7 +66,11 @@ public class InventoryServiceImpl implements InventoryService {
               throw new IllegalArgumentException("Inventory item with SKU already exists");
             });
 
-    InventoryItem saved = inventoryRepository.save(new InventoryItem(sku, name, quantity));
+    User currentUser = currentUserProvider.getCurrentUser();
+    InventoryItem item = InventoryItem.create(sku, name, quantity, currentUser);
+    InventoryItem saved = inventoryRepository.save(item);
+
+    logActivity("CREATE", saved);
     return InventoryMapper.toDto(saved);
   }
 
@@ -49,16 +82,26 @@ public class InventoryServiceImpl implements InventoryService {
             .findBySku(sku)
             .orElseThrow(() -> new IllegalArgumentException("Inventory item not found"));
 
+    // Ownership enforcement
+    User currentUser = currentUserProvider.getCurrentUser();
+    if (!item.getOwner().getId().equals(currentUser.getId())) {
+      throw new OwnershipException("Cannot modify inventory not owned by current user");
+    }
+
     if (delta > 0) item.increaseQuantity(delta);
     if (delta < 0) item.decreaseQuantity(Math.abs(delta));
 
-    return InventoryMapper.toDto(inventoryRepository.save(item));
+    InventoryItem saved = inventoryRepository.save(item);
+    logActivity("UPDATE_QUANTITY", saved);
+    return InventoryMapper.toDto(saved);
   }
 
   @Override
   @Transactional(readOnly = true)
   public List<InventoryItemResponseDto> getAllInventories() {
-    return inventoryRepository.findAll().stream().map(InventoryMapper::toDto).toList();
+    return inventoryRepository.findAll().stream()
+        .map(InventoryMapper::toDto)
+        .collect(Collectors.toList());
   }
 
   @Override
@@ -84,15 +127,17 @@ public class InventoryServiceImpl implements InventoryService {
   @Override
   @Transactional(readOnly = true)
   public List<InventoryItemResponseDto> getInventoryByName(String name) {
-    return inventoryRepository.findByName(name).stream().map(InventoryMapper::toDto).toList();
+    return inventoryRepository.findByName(name).stream()
+        .map(InventoryMapper::toDto)
+        .collect(Collectors.toList());
   }
 
   @Override
   @Transactional(readOnly = true)
-  public List<InventoryItemResponseDto> getInventoryByRange(int min, int max) {
-    return inventoryRepository.findByQuantityBetween(min, max).stream()
+  public List<InventoryItemResponseDto> getInventoryByRange(int minQuantity, int maxQuantity) {
+    return inventoryRepository.findByQuantityBetween(minQuantity, maxQuantity).stream()
         .map(InventoryMapper::toDto)
-        .toList();
+        .collect(Collectors.toList());
   }
 
   @Override
@@ -100,45 +145,40 @@ public class InventoryServiceImpl implements InventoryService {
   public List<InventoryItemResponseDto> getInventoryByFilter(String sku, String name) {
     List<InventoryItem> items =
         (sku != null && name != null) ? inventoryRepository.findBySkuAndName(sku, name) : List.of();
-    return items.stream().map(InventoryMapper::toDto).toList();
+    return items.stream().map(InventoryMapper::toDto).collect(Collectors.toList());
   }
 
   @Override
   @Transactional(readOnly = true)
   public List<InventoryItemResponseDto> getInventoryByStorageUnitId(Long storageUnitId) {
-    return storageUnitInventoryAssignmentRepository.findByStorageUnit_Id(storageUnitId).stream()
-        .map(assignment -> InventoryMapper.toDto(assignment.getInventoryItem()))
-        .toList();
+    return assignmentRepository.findByStorageUnit_Id(storageUnitId).stream()
+        .map(a -> InventoryMapper.toDto(a.getInventoryItem()))
+        .collect(Collectors.toList());
   }
 
   @Override
   @Transactional(readOnly = true)
   public List<InventoryItemResponseDto> getInventoryByWarehouseId(Long warehouseId) {
     return storageUnitRepository.findByWarehouse_Id(warehouseId).stream()
-        .flatMap(
-            storageUnit ->
-                storageUnitInventoryAssignmentRepository
-                    .findByStorageUnit_Id(storageUnit.getId())
-                    .stream())
-        .map(assignment -> InventoryMapper.toDto(assignment.getInventoryItem()))
-        .toList();
+        .flatMap(su -> assignmentRepository.findByStorageUnit_Id(su.getId()).stream())
+        .map(a -> InventoryMapper.toDto(a.getInventoryItem()))
+        .collect(Collectors.toList());
   }
 
   @Override
   @Transactional(readOnly = true)
   public List<InventoryItemResponseDto> getInventoriesFiltered(
-      String sku, String name, Integer min, Integer max) {
+      String sku, String name, Integer minQuantity, Integer maxQuantity) {
     List<InventoryItem> filtered;
-
     if (sku != null && name != null) filtered = inventoryRepository.findBySkuAndName(sku, name);
     else if (sku != null)
       filtered = inventoryRepository.findBySku(sku).map(List::of).orElse(List.of());
     else if (name != null) filtered = inventoryRepository.findByName(name);
-    else if (min != null && max != null)
-      filtered = inventoryRepository.findByQuantityBetween(min, max);
+    else if (minQuantity != null && maxQuantity != null)
+      filtered = inventoryRepository.findByQuantityBetween(minQuantity, maxQuantity);
     else filtered = inventoryRepository.findAll();
 
-    return filtered.stream().map(InventoryMapper::toDto).toList();
+    return filtered.stream().map(InventoryMapper::toDto).collect(Collectors.toList());
   }
 
   @Override
@@ -149,11 +189,18 @@ public class InventoryServiceImpl implements InventoryService {
             .findById(id)
             .orElseThrow(() -> new IllegalArgumentException("Inventory item not found"));
 
+    // Ownership enforcement
+    User currentUser = currentUserProvider.getCurrentUser();
+    if (!item.getOwner().getId().equals(currentUser.getId())) {
+      throw new OwnershipException("Cannot delete inventory not owned by current user");
+    }
+
     if (item.getQuantity() > 0)
       throw new IllegalStateException("Cannot delete inventory with remaining quantity");
-    if (storageUnitInventoryAssignmentRepository.existsByInventoryItem_Id(id))
+    if (assignmentRepository.existsByInventoryItem_Id(id))
       throw new IllegalArgumentException("Cannot delete inventory item assigned to storage units");
 
     inventoryRepository.delete(item);
+    logActivity("DELETE", item);
   }
 }
